# chobo-log

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  appveyor.yml
examples/: Simple.cpp
include/chobo/: Log.h
include/chobo/log/: Config.h  LogManager.h  Logger.h  PPCat.h  Scope.h  Severity.h  Sink.h
include/chobo/log/ext/: DelayedLogger.h
include/chobo/log/sinks/: AndroidSink.h  ConsoleSink.h  FILERecorder.h  IOSSink.h  RingBufferSink.h
perf/: .gitignore  CMakeLists.txt  configure.rb
perf/compilation/: msvc.bat  msvc.txt
perf/execution/: Execution.cpp  bench-chobo-log.cpp  bench-fstream.cpp  bench-spdlog.cpp
src/: Export.cpp  LogManager.cpp  Scope.cpp  Sink.cpp  Src.h
src/sinks/: AndroidSink.cpp  ConsoleSink.cpp  FILERecorder.cpp  IOSSink.mm  RingBufferSink.cpp
test/: Core.cpp  CoreDisabled.cpp  CoreScope.cpp  README.md  Scopes.cpp  Scopes.h
test/test_sink/: TestSink.cpp  TestSink.h
